tests/invalid/for_loop_heterogeneous_tuple/main.py
t: tuple[int, str] = (1, "hello")
for x in t:
    print(x)
